# CTFs-for-Developers

./: README.md
bind_this/: README.md  bind_this.Dockerfile
bind_this/bind_this/: CMakeLists.txt  flag1.c  flag1.h  flag2.c  flag2.h  main.c  self_mod.c  self_mod.h
privacyplz/: README.md  privacyplz.Dockerfile
privacyplz/privacy_h4ck3r/: CMakeLists.txt  build_and_run.sh  main.cpp
privacyplz/privacyplz/: CMakeLists.txt
privacyplz/privacyplz/cmake/: privacyplz.cmake.in
privacyplz/privacyplz/include/privacyplz/: Access.hpp  Account.hpp
privacyplz/privacyplz/src/: Account.cpp  CMakeLists.txt
privacyplz/privacyplz/test/: AccountTest.cpp  CMakeLists.txt
